modificacion index - portafolio2

--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,8 @@ body{
     width: 100%;
 }
 .texto-portafolio{
-    width: 500px;
-    text-align: justify;
+    width: 400px;
+    text-align: center;
     padding: 10px 20px;
     
 }
