--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,161 @@
 * {
     margin: 0;
     padding: 0;
-}
-body{
-    font-family: helvetica;
-}
-.link-referencia{
-    background-color: coral;
-    color: #000;
-    padding: 10px;
-    text-decoration: none;
-    border-radius: 9px;
-    margin: 20px;
-
-}
-.lista-semanas{
-    margin: 40px;
-    padding: 40px;
-}
-.lista-semanas li{
-    padding: 20px;
+  }
+  
+  body {
+    font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
+  background: linear-gradient(60deg, rgba(16, 74, 139, 0.76) 20%, rgba(124, 123, 66, 0.67) 80%);
+  }
+  
+  .header {
+    display: flex;
+    /* flex-start
+      center
+      flex-end */
+    justify-content: flex-end;
+  }
+  
+  .nav ul {
+    display: flex;
     list-style: none;
-}
-h3{
-    margin: 20px;
-}
-
-.divisor{
-    margin: 20px;
-    height: 4px;
-    background-color: salmon;
+  }
+  
+  .nav ul > li {
+    padding: 15px;
+  }
+  
+  .nav ul li a {
+    text-decoration: none;
+    color: rgb(0, 1, 2);
+    font-weight: 600;
+  }
+  
+  .banner {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .title {
+    font-size: 3em;
+    font-weight: 500;
+    color: rgb(0, 1, 2);
+    position: relative; left: 100px;
+  }
+  
+  .resume {
+    width: 45%;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: rgb(0, 1, 2);
+    position: relative; left: 10px;
+  }
+  
+  .resume-title{
+    width: 45%;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: rgb(0, 1, 2);
+    position: relative; left: 100px;
+    
+  }
+  
+  .btn-primary {
+    background-color: #ff0534;
+    color: #fff;
     border: none;
-    border-radius: 12px;
-}
-
-.link-referencia:hover{
-    color: white;
-}
-
-.contenedor-principal{
-    text-align: center;
-}
-.contenedor-clases{
-height: 100vh;
-background-color: rgb(236, 238, 146);
-}
-
-.imagen-perfil{
-    border-radius: 50px;
-    border: 2px solid rgb(12, 85, 18);
-}
-
-.btn-github{
-    border: 2px solid rgb(12, 85, 18);
+    padding: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative; left: 110px;
+    border-radius: 10px;
+    font-weight: bold
+    ;
+  }
+  
+  .img-profile {
+    width: 245px;
+    height:243px;
+    border-radius: 50%;
+    position: relative; right: 100px;
+    border: solid 5px whitesmoke;
+  }
+  
+  .section-works {
+    max-width: 800px;
+    margin: auto;
+  }
+  
+  .card {
+    display: flex;
+  }
+  
+  .card div img {
+    width: 246px;
+    height: 180px;
+    object-fit: cover;
     border-radius: 8px;
-    padding: 10px;
+  }
+  
+  .text-works {
+    font-size: 1.5em;
+    margin-bottom: 30px;
+    font-weight: 300;
+    color: rgb(0, 1, 2);
+  }
+  
+  .container-detail {
+    margin-left: 20px;
+    
+  }
+
+  .sombra{
+    -webkit-box-shadow: 6px 6px 10px -1px rgba(15,59,84,1);
+    -moz-box-shadow: 6px 6px 10px -1px rgba(15,59,84,1);
+    box-shadow: 6px 6px 10px -1px rgba(15,59,84,1);
+  }
+  .container-detail p {
+    margin-top: 20px;
+    width: 100% !important;
+  }
+  
+  .label-dark {
+    background-color: #fac927;
+    color: #000;
+    border-radius: 20px;
+    padding: 5px 10px;
+    font-weight: bold;
+  }
+  
+  .text-light {
+    color: #e8eaec;
+  }
+  
+  hr {
+    height: 0.5px;
+    background-color: #152050;
+    border: 1.5px solid #852335;
+    margin-top: 10px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .link-portafolio {
     color: #000;
     text-decoration: none;
-
-}
-/* personal portfolio version */
-.mifoto {
-    height: 150px;
-    width: 150px;
-    position: relative;
-    display: inline-block;
-    border-radius: 50%;
-    overflow: hidden;
-}
-.mifoto:before {
-   content: "";
-    border-radius: 50%;
-    border: 5px solid #ffffff;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-.personal-caja h2{
-    font-size: 3rem;
-    margin-top: 30px;
-}
-.personal-caja h3{
-    font-size: 2.2rem;
-    margin-top: .6rem;
-}
-
-.efecto-color {
-    background: linear-gradient(60deg, rgba(16, 74, 139, 0.76) 10%, rgba(137, 192, 127, 0.67) 50%);
-}
-.posicion-color {
-    padding: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 65%;
-}
-.fullscreen {
-    height: 70vh !important;
-    width: 100%;
-}
-.texto-portafolio{
-    width: 400px;
-    text-align: center;
-    padding: 10px 20px;
-    
-}
-.img-foto {
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-}
+    transition: 0.3s;
+  }
+  
+  .link-portafolio:hover {
+    color: #ff6464;
+    text-decoration: underline;
+  }
+  
+  .titulo-reto {
+    color: white;
+  }
