actualizacion de pórtafolio

--- a/css/style.css
+++ b/css/style.css
@@ -160,3 +160,45 @@
   .titulo-reto {
     color: white;
   }
+  
+  
+.footer-style{
+    padding: 5rem 0;
+}
+
+.footer-social ul{
+    margin: 0;
+    padding: 0;
+}
+
+.footer-social li{
+    display: inline-block;
+}
+
+.footer-social a {
+    display: block;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    line-height: 45px;
+    border-radius: 50px;
+    font-size: 17px;
+    margin: 0 10px 0 0;
+    border: 1px solid transparent;
+    -webkit-transition: background-color .2s ease-in-out;
+    -o-transition: background-color .2s ease-in-out;
+    transition: background-color .2s ease-in-out;
+}
+
+.footer-social li:nth-last-child(1) a{
+    margin-right: 0;
+}
+
+.footer-social li a:hover{
+    background-color:#a07bf7;
+    color: #ffffff;
+}
+
+.company-about{
+    font-size: 14px;
+}
